solved with word wrap

--- a/blog.css
+++ b/blog.css
@@ -1,10 +1,5 @@
 body {
     background-image: linear-gradient(
-        to top right,
-        rgb(122, 18, 207),
-        rgb(53, 53, 252)
-    );
-    background-image: linear-gradient(
         30deg,
         rgb(52, 152, 247),
         rgb(42, 240, 207),
@@ -13,7 +8,8 @@ body {
     background-size: 100%;
     width: 100%;
     height: 100%;
-    height: auto;
+    background-size: 100%;
+    background-repeat: repeat;
 }
 #id {
     text-align: center;
