--- a/style.css
+++ b/style.css
@@ -203,11 +203,14 @@ footer {
     padding: 1.5rem;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.3rem;
+    white-space: wrap;
+    word-wrap: break-word;
 }
 .blogParent {
     margin-top: -2rem;
     flex-basis: 90%;
     width: 100%;
+    /* overflow: hidden; */
 }
 .blog h3 {
     margin-bottom: 0.5rem;
